# fast-exif-rs-py

./: .gitignore  Cargo.toml  Makefile  README.md  example.py  gitea_manager.py  gitea_push.sh  gitea_sync.sh  pyproject.toml  requirements.txt
my_lakeshore/: Makefile  README.md  contact_form_automation.py
nef/: Makefile  README.md
nef/decoder/: Makefile
nef/decoder/include/: hef_bitstream.hpp  hef_decode.hpp  hef_export.hpp  hef_format.hpp
nef/decoder/src/: hef_bitstream.cpp  hef_decode.cpp  hef_export.cpp  hef_format.cpp
nef/decoder/tools/: hef_to_tiff  hef_to_tiff.cpp
nef/docs/: build_imlib2_loader.md
nef/loaders/: Makefile  loader_nef.c  loader_nef.cpp  loader_raw.cpp  test_always_success.cpp  test_loader.c  test_minimal.cpp
nef/requirements/: nikon_he_decoder.sdoc
nef/tools/: compression_analyzer.py  feh_nef_wrapper.py  hef_dump.py  hef_test_decoder.py  nef_extract_preview.py  nef_probe.py  test_parser.py  ticoraw_analyzer.py
rosetta-requirements/: Makefile  README.md  requirements.txt
rosetta-requirements/.cursor/: rules
rosetta-requirements/docs/: README.md  index.html  strictdoc.toml
rosetta-requirements/docs/doorstop_output/: index.html
rosetta-requirements/docs/requirements/: DIR.sdoc  RMS.sdoc
rosetta-requirements/docs/strictdoc_output/: index.html
rosetta-requirements/docs/strictdoc_output/_cache/0.14.0/sdoc/: DIR.sdoc_6534159693ccceebdb330c8a08da145c_21d5c24f7860f54aae51e3633c8a3584  RMS.sdoc_127f7ca4102f9d55647475d157bc29ca_2c4784c7660e59927fc89d44e522c169
rosetta-requirements/doorstop_requirements/: .gitignore
rosetta-requirements/doorstop_requirements/sdd_requirements/: .doorstop.yml
rosetta-requirements/doorstop_requirements/srd_requirements/: .doorstop.yml  SRD-0001.yml  SRD-0002.yml  SRD-0003.yml  SRD-0004.yml  SRD-0005.yml  SRD-0006.yml
rosetta-requirements/doorstop_requirements/sys_requirements/: .doorstop.yml  SYS-0001.yml  SYS-0002.yml  SYS-0003.yml  SYS-0004.yml  SYS-0005.yml
src/: lib.rs
